# local-pokerogue

./: .env  .gitmodules  LICENSE  MOD-HASH  README.md  body-template.md  build.js  package-lock.json  package.json  pnpm-lock.yaml  post-build.js  pre-build.js  release.js  sync-release.js  sync.js  tools.js
.github/workflows/: build.yml  release.yml  sync-release.yml  sync.yml  workflow-release.yml  workflow-sync-release.yml  workflow-sync.yml
scripts/: fetch-polyfill.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
