[package]
authors = ["FanHua"]
description = "PokeRogue"
edition = "2021"
name = "pokerogue"
version = "0.0.0"

[build-dependencies]
tauri-build = {version = "1", features = []}

[dependencies]
serde = {version = "1", features = ["derive"]}
serde_json = "1"
tauri = {version = "1", features = ["shell-open"]}

[features]
custom-protocol = ["tauri/custom-protocol"]
